@@ -5,6 +5,6 @@
   "issue_tracker": "https://github.com/twrecked/hass-aarlo/issues",
   "dependencies": ["ffmpeg"],
   "codeowners": ["@twrecked"],
-  "requirements": [],
-  "version": "0.7.1b6"
+  "requirements": ["unidecode"],
+  "version": "0.7.1b7"
 }
