@@ -236,3 +236,7 @@ class ArloCfg(object):
     @property
     def save_media_to(self):
         return self._kw.get("save_media_to", "")
+
+    @property
+    def no_unicode_squash(self):
+        return self._kw.get("no_unicode_squash", False)
