@@ -1,4 +1,5 @@
 import threading
+from unidecode import unidecode
 
 from .constant import (
     BATTERY_KEY,
@@ -105,8 +106,10 @@ class ArloDevice(object):
     def entity_id(self):
         if self._arlo.cfg.serial_ids:
             return self.device_id
-        else:
+        elif self._arlo.cfg.no_unicode_squash:
             return self.name.lower().replace(" ", "_")
+        else:
+            return unidecode(self.name.lower().replace(" ", "_"))
 
     @property
     def name(self):
